--- a/local/pressure-washing-bawtry.html
+++ b/local/pressure-washing-bawtry.html
@@ -138,7 +138,7 @@ style="font-size:20px; color:#000; text-decoration:none; font-weight:600;">Home<
 <p>Maintaining the exterior of a property in Bawtry can be demanding without professional help. Driveways, patios, walls, and other outdoor surfaces are continually exposed to weather conditions, vehicle use, foot traffic, and natural growth. Over time, moss, algae, lichen, dirt, and stubborn staining begin to accumulate, leaving surfaces looking worn, slippery, and unsafe. Our professional pressure washing services are designed to remove this buildup efficiently, restoring cleanliness, safety, and visual appeal.</p>
 <p>We use commercial-grade pressure washing equipment alongside proven surface-specific techniques. Before starting any work, we carry out a full assessment to determine the correct pressure and cleaning method—whether the surface is block paving, concrete, tarmac, natural stone, or rendered walls. This careful approach ensures a thorough clean without damage. For both homeowners and businesses in Bawtry, pressure washing is an effective way to enhance kerb appeal, improve safety, and protect exterior surfaces from long-term wear.</p>
 <img src="/images/pressure-washing-patios.webp"
-alt=""
+alt="Professional pressure washing in Bawtry cleaning exterior surfaces and removing dirt, algae, and moss from residential properties."
 style="max-width:100%; height:auto; margin-top:15px; cursor:pointer;"
 onclick="openLightbox(this.src, this.alt)"
 tabindex="0"
@@ -151,7 +151,7 @@ onkeypress="if(event.key==='Enter'){openLightbox(this.src,this.alt)}">
 <p>Driveways are often the most noticeable and heavily used areas of a property. In Bawtry, they frequently collect oil spills, tyre marks, moss, algae, and ingrained dirt. If left untreated, these contaminants can make driveways look neglected and increase the risk of slips. Professional driveway pressure washing removes this buildup, leaving the surface clean, refreshed, and welcoming.</p>
 <p>Our driveway cleaning service is suitable for block paving, concrete, tarmac, and natural stone. We carefully match pressure levels and techniques to the surface type to ensure effective cleaning without surface damage. Regular driveway maintenance also helps prevent weed growth, moisture retention, and permanent staining. Many property owners in Bawtry choose this service to improve kerb appeal, protect property value, and maintain safe access throughout the year.</p>
 <img src="/images/pressure-washing-driveway.webp"
-alt=""
+alt="Driveway pressure washing in Bawtry removing oil stains, tyre marks, moss, and ingrained dirt from block paving."
 style="max-width:100%; height:auto; margin-top:15px; cursor:pointer;"
 onclick="openLightbox(this.src, this.alt)"
 tabindex="0"
@@ -164,7 +164,7 @@ onkeypress="if(event.key==='Enter'){openLightbox(this.src,this.alt)}">
 <p>Patios and decking areas are designed for outdoor living but are particularly vulnerable to algae, moss, dirt, and spill marks. Shaded or damp areas can quickly develop slippery green growth, making surfaces unsafe and unattractive. Our pressure washing service restores patios and decking to a clean, safe, and inviting condition, ready for everyday use or entertaining.</p>
 <p>We clean a wide variety of surfaces, including concrete paving, natural stone, porcelain slabs, wooden decking, and composite boards. Each surface is treated with the appropriate pressure and method to prevent damage such as etching or splintering. Routine patio and deck cleaning not only improves appearance but also extends the lifespan of materials by reducing moisture buildup and surface deterioration. Pressure washing is an ideal solution for Bawtry homeowners looking to refresh and protect their outdoor spaces.</p>
 <img src="/images/pressure-washing-walls.webp"
-alt=""
+alt="Patio and decking pressure washing in Bawtry restoring slippery outdoor seating areas to a clean and safe finish."
 style="max-width:100%; height:auto; margin-top:15px; cursor:pointer;"
 onclick="openLightbox(this.src, this.alt)"
 tabindex="0"
@@ -177,7 +177,7 @@ onkeypress="if(event.key==='Enter'){openLightbox(this.src,this.alt)}">
 <p>Exterior walls are constantly exposed to weather, pollution, and organic growth, which can gradually dull the appearance of your property. Brickwork, render, stone, and cladding in Bawtry often develop algae, moss, and grime that basic cleaning methods cannot remove. Professional pressure washing effectively lifts these deposits, restoring walls to a cleaner, brighter finish.</p>
 <p>We use specialist equipment and controlled pressure levels to safely clean all wall types. Each project begins with a detailed inspection to determine the most suitable approach. In addition to improving visual appeal, regular exterior wall cleaning helps protect the structure by removing growth that traps moisture, reducing the risk of staining and long-term deterioration. Clean walls create a strong first impression for residential and commercial properties alike.</p>
 <img src="/images/pressure-wash-decking.webp"
-alt=""
+alt="Exterior wall pressure washing in Bawtry removing algae, pollution staining, and grime from brick, render, and stone walls."
 style="max-width:100%; height:auto; margin-top:15px; cursor:pointer;"
 onclick="openLightbox(this.src, this.alt)"
 tabindex="0"
@@ -281,74 +281,74 @@ Very little preparation is needed. We recommend moving vehicles, furniture, and 
 "mainEntity": [
 {
 "@type": "Question",
-"name": "",
+"name": "What surfaces can be pressure washed?",
 "acceptedAnswer": {
 "@type": "Answer",
-"text": ""
+"text": "Pressure washing is suitable for many exterior surfaces, including driveways, patios, decking, walkways, fences, walls, garage doors, gutters, and conservatory roofs. Each surface is cleaned using the correct pressure and technique."
 }
 },
 {
 "@type": "Question",
-"name": "",
+"name": "Is pressure washing safe for all materials?",
 "acceptedAnswer": {
 "@type": "Answer",
-"text": ""
+"text": "Yes. Professionals adjust both pressure and cleaning methods depending on whether the surface is block paving, concrete, tarmac, stone, timber, or render to prevent damage."
 }
 },
 {
 "@type": "Question",
-"name": "",
+"name": "How often should exterior surfaces be pressure washed?",
 "acceptedAnswer": {
 "@type": "Answer",
-"text": ""
+"text": "Most properties benefit from annual cleaning. High-traffic or shaded areas may require more frequent washing to control algae and moss growth and maintain safety."
 }
 },
 {
 "@type": "Question",
-"name": "",
+"name": "Can pressure washing remove oil stains and tyre marks?",
 "acceptedAnswer": {
 "@type": "Answer",
-"text": ""
+"text": "Yes. Professional driveway pressure washing removes oil stains, tyre marks, and ingrained dirt. Heavily stained areas may need additional treatments for best results."
 }
 },
 {
 "@type": "Question",
-"name": "",
+"name": "Does pressure washing improve safety?",
 "acceptedAnswer": {
 "@type": "Answer",
-"text": ""
+"text": "Absolutely. Removing algae, moss, and grime significantly reduces slippery surfaces, helping prevent slips and accidents."
 }
 },
 {
 "@type": "Question",
-"name": "",
+"name": "Is pressure washing environmentally friendly?",
 "acceptedAnswer": {
 "@type": "Answer",
-"text": ""
+"text": "Yes. We use water efficiently and only apply biodegradable cleaning products when necessary, ensuring safety for plants, pets, and surrounding areas."
 }
 },
 {
 "@type": "Question",
-"name": "",
+"name": "How long does pressure washing take?",
 "acceptedAnswer": {
 "@type": "Answer",
-"text": ""
+"text": "Job duration depends on surface size and condition. Smaller areas may take a few hours, while larger properties or commercial sites may take a full day."
 }
 },
 {
 "@type": "Question",
-"name": "",
+"name": "Can pressure washing restore older walls?"",
 "acceptedAnswer": {
 "@type": "Answer",
-"text": ""
+"text": "Yes. It removes dirt, algae, moss, and pollution stains from brick, stone, render, and cladding, helping prevent further deterioration."
 }
 },
 {
 "@type": "Question",
-"name": "",
+"name": "Do I need to prepare my property beforehand?",
 "acceptedAnswer": {
 "@type": "Answer",
-"text": ""
+"text": "Very little preparation is needed. We recommend moving vehicles, furniture, and lightweight items from the area. Additional guidance is provided for delicate surfaces if required."
 }
 }
 ]
