--- a/local/pressure-washing-bawtry.html
+++ b/local/pressure-washing-bawtry.html
@@ -9,7 +9,7 @@
 <title>Pressure Washing Solutions in Bawtry | Driveways, Patios & Exterior Surfaces</title>
 <link rel="icon" href="/favicon.png" type="image/png">
 <link rel="canonical" href="https://homerepairs4u.com/local/pressure-washing-bawtry.html">
-<meta name="description"Expert pressure washing in Bawtry for driveways, patios, decking, and external walls. Dependable, safe cleaning for residential and commercial properties.">
+<meta name="description" content="Expert pressure washing in Bawtry for driveways, patios, decking, and external walls. Dependable, safe cleaning for residential and commercial properties.">
 
 <link rel="preload" as="image" href="/images/home-repairs-4u-doncaster.webp" />
 <style>
