--- a/local/pressure-washing-bawtry.html
+++ b/local/pressure-washing-bawtry.html
@@ -337,7 +337,7 @@ Very little preparation is needed. We recommend moving vehicles, furniture, and 
 },
 {
 "@type": "Question",
-"name": "Can pressure washing restore older walls?"",
+"name": "Can pressure washing restore older walls?",
 "acceptedAnswer": {
 "@type": "Answer",
 "text": "Yes. It removes dirt, algae, moss, and pollution stains from brick, stone, render, and cladding, helping prevent further deterioration."
