--- a/local/pressure-washing-brodsworth.html
+++ b/local/pressure-washing-brodsworth.html
@@ -150,6 +150,12 @@ onkeypress="if(event.key==='Enter'){openLightbox(this.src,this.alt)}">
 <h2></h2>
 <p></p>
 <p></p>
+<p style="margin-top:15px;">
+For a detailed step-by-step guide on how to safely clean a driveway, read more here: 
+<a href="https://homerepairs4u.com/how-to/pressure-wash-a-driveway.html" target="_blank" rel="noopener noreferrer">
+How to Pressure Wash a Driveway
+</a>
+</p>
 <img src="/images/pressure-washing-driveway.webp"
 alt=""
 style="max-width:100%; height:auto; margin-top:15px; cursor:pointer;"
