--- a/quote-calculator/pressure-washing.html
+++ b/quote-calculator/pressure-washing.html
@@ -200,10 +200,27 @@ input:invalid { border-color:red; background:#ffe6e6; }
 <script>
 // DATES
 const dates = [
-{ date: "Monday 27th Jan", status: "available" },
-{ date: "Wednesday 29th Jan", status: "booked" },
-{ date: "Friday 31st Jan", status: "available" },
-{ date: "Monday 3rd Feb", status: "available" }
+{ date: "Thursday 29th Jan", status: "available" },
+{ date: "Friday 30th Jan", status: "booked" },
+{ date: "Saturday 31st Jan", status: "available" },
+{ date: "Sunday 1st Feb", status: "available" },
+{ date: "Monday 2nd Feb", status: "available" },
+{ date: "Tuesday 3rd Feb", status: "booked" },
+{ date: "Wednesday 4th Feb", status: "booked" },
+{ date: "Thursday 5th Feb", status: "available" },
+{ date: "Friday 5th Feb", status: "available" },
+{ date: "Saturday 7th Feb", status: "booked" },
+{ date: "Sunday 8th Feb", status: "booked" },
+{ date: "Monday 9th Feb", status: "available" },
+{ date: "Tuesday 10th Feb", status: "available" },
+{ date: "Wednesday 11th Feb", status: "booked" },
+{ date: "Thursday 12th Feb", status: "available" },
+{ date: "Friday 13th Feb", status: "booked" },
+{ date: "Saturday 14th Feb", status: "available" },
+{ date: "Sunday 15th Feb", status: "booked" },
+{ date: "Monday 16th Feb", status: "available" },
+{ date: "Tuesday 17th Feb", status: "available" }
+  
 ];
 
 const datesGridEl = document.getElementById("datesGrid");
