Update availability status for pressure washing dates

--- a/quote-calculator/pressure-washing.html
+++ b/quote-calculator/pressure-washing.html
@@ -200,11 +200,11 @@ input:invalid { border-color:red; background:#ffe6e6; }
 <script>
 // DATES
 const dates = [
-{ date: "Thursday 29th Jan", status: "available" },
+{ date: "Thursday 29th Jan", status: "booked" },
 { date: "Friday 30th Jan", status: "booked" },
-{ date: "Saturday 31st Jan", status: "available" },
-{ date: "Sunday 1st Feb", status: "available" },
-{ date: "Monday 2nd Feb", status: "available" },
+{ date: "Saturday 31st Jan", status: "booked" },
+{ date: "Sunday 1st Feb", status: "booked" },
+{ date: "Monday 2nd Feb", status: "booked" },
 { date: "Tuesday 3rd Feb", status: "booked" },
 { date: "Wednesday 4th Feb", status: "booked" },
 { date: "Thursday 5th Feb", status: "available" },
